[gd_scene load_steps=8 format=3 uid="uid://de1j7rjvv024o"]

[ext_resource type="Script" uid="uid://ceisl8usxx4w0" path="res://Scripts/main.gd" id="1_21xkr"]
[ext_resource type="Script" uid="uid://bcts7agxrne5d" path="res://Scripts/platform_spawner.gd" id="1_kry3j"]
[ext_resource type="PackedScene" uid="uid://bn1jmjyr8w5o6" path="res://Scenes/platform_short.tscn" id="2_jjvhh"]
[ext_resource type="PackedScene" uid="uid://dri78j7ge1rkw" path="res://Scenes/platform_medium.tscn" id="3_kry3j"]
[ext_resource type="PackedScene" uid="uid://div2rov6vk7j" path="res://Scenes/platform_long.tscn" id="4_21xkr"]
[ext_resource type="PackedScene" uid="uid://cpfij7jwabuxt" path="res://Scenes/player.tscn" id="5_kry3j"]

[sub_resource type="Environment" id="Environment_kry3j"]
background_mode = 1
background_color = Color(0.149905, 1.71225e-05, 0.151225, 1)
ambient_light_color = Color(0.517184, 0.517184, 0.517184, 1)

[node name="main" type="Node"]
script = ExtResource("1_21xkr")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="PlatformSpawner" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 65.8212)
script = ExtResource("1_kry3j")
platforms = Array[PackedScene]([ExtResource("2_jjvhh"), ExtResource("3_kry3j"), ExtResource("4_21xkr")])

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, -8.27662e-08, -1.89685e-09, 8.0437e-08, 0.965926, 0.258819, -1.95893e-08, -0.258819, 0.965926, 0, 3, 4)
environment = SubResource("Environment_kry3j")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Score" type="Label" parent="UI"]
layout_mode = 0
offset_right = 181.0
offset_bottom = 72.0
theme_override_font_sizes/font_size = 64
text = "Score: 0"

[node name="HighScore" type="Label" parent="UI"]
layout_mode = 0
offset_left = 657.0
offset_right = 1073.0
offset_bottom = 88.0
theme_override_font_sizes/font_size = 64
text = "High score: 0"

[node name="Player" parent="." instance=ExtResource("5_kry3j")]

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="died" from="Player" to="." method="_on_player_died"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
